# website

./: .djlintrc  .eleventy.js  .eleventyignore  .gitignore  .pre-commit-config.yaml  README.md  about  babel.config.js  freeze.py  gulpfile.js  index.html  lighthouserc.js  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json  setup.cfg  tailwind.config.js  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  cron-run.yaml  lighthouse.yml  linkcheck.yml  update.yaml
about/: index.html
download/: index.html
functions/: deploy-succeeded.js
help/: index.html
images/: report_group.xcf
images/logo/: thinking-face-text.xcf  thinking-face.xcf
lambda/: deploy-succeeded.js
pricing/: index.html
src/: about.md  about.njk  automation-hub.njk  bi-library.njk  docs.njk  download.njk  help.njk  hub.njk  index.njk  library.njk  new.njk  pricing.njk  robots.txt  safelist.html  sitemap.njk  styles.11ty.js  system.njk
src/_data/: automation_hub.json  bi_library.json  eleventyComputed.js  hub.json  library.json  requests.json  service.json  site.json  system.json
src/_includes/: docs.njk  docs_home.njk  docs_hub.njk  docs_library.njk  docs_nav.njk  docs_requests.njk  docs_service.njk  docs_system.njk  foot.njk  layout.njk  nav.njk  siteLayout.njk
src/_utils/: minify-html.js  scripts.11ty.js  styles.11ty.js
src/docs/: index.md
src/installers/: hub.njk  requests.njk  service.njk  system.njk
static/: .webassets-manifest
web/: __init__.py  assets.py  config.py  extensions.py
(+314 files in other folders)
