[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.black]
max_line_length = 99
include = '\.py$'
exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist

      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data
    )/
    '''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 99
quiet = true
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.poetry]
name = "atlas-website"
version = "0.1.0"
description = "Atlas.bi website"
authors = ["Christopher Pickering <cpickering@rhc.net>"]
license = "GPL-3.0-or-later"
packages = [
    { include = "web" }
]

[tool.poetry.dependencies]
python = "^3.6.1"
Flask = "1.1.4"
Flask-Assets = "^2.0"
Flask-Caching = "^1.10.1"
Flask-HTMLmin = "^2.1.0"
Flask-Compress = "^1.9.0"
rcssmin = "^1.0.6"
jsmin = "^2.2.2"
Frozen-Flask = "^0.15"
pre-commit = "^2.12.1"

[tool.poetry.dev-dependencies]

[tool.pylint]

[tool.pylint.basic]
good-names = "i,j,k,ex,Run,x,id,e,me,l,_"
include-naming-hint = "no"

[tool.pylint.format]
max-line-length = 99
max-module-lines = 1000

[tool.pylint.messages_control]
disable = "E0401,C0415,R0903,C0115"
